--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Fulcrum Associazione Culturale</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="css/singlePageTemplate.css" rel="stylesheet" type="text/css">
-<link href="navbar.css" rel="stylesheet" type="text/css">
+<link href="css/navbar.css" rel="stylesheet" type="text/css">
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
@@ -17,28 +17,33 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+<script src="js/slippry.min.js"></script>
+<link rel="stylesheet" href="css/slippry.css" />
+
 </head>
 <body>
 <!-- Main Container -->
+	<div class="navbar">
+	  <div class="subnav">
+	    <button class="subnavbtn">Progetti <i class="fa fa-caret-down"></i></button>
+	    <div class="subnav-content"> <a href="#">Gioco dell'Oca</a> <a href="#">Guida alla Frontiera Galattica</a> <a href="#">Ammo2</a></div>
+      </div>
+	  <a href ="#notizie">Notizie</a> <a href ="#fulcrum">Fulcrum</a> <a href ="#servizi">Servizi</a> <a href ="#faq">FAQ</a> <a href ="#contatti">Contatti</a> </div>
 	<div class="container"> 
   	<!-- Navigation -->
-  	<div class="navbar">
-    	<div class="subnav">
-      	<button class="subnavbtn">Progetti <i class="fa fa-caret-down"></i></button>
-      	<div class="subnav-content"> <a href="#">Gioco dell'Oca</a> <a href="#">Guida alla Frontiera Galattica</a> <a href="#">Ammo2</a></div>
-    </div>
-    	<a href ="#notizie">Notizie</a> 
-		<a href ="#fulcrum">Fulcrum</a> 
-		<a href ="#servizi">Servizi</a> 
-		<a href ="#faq">FAQ</a> 
-		<a href ="#contatti">Contatti</a>
-	</div>
-<!-- Hero Section -->
+<!-- Hero Section 
   	<section class="hero" id="hero">
     	<div class="logolarge"><img src="images/fulcrum orizzontale.jpg" alt=""/></div>	  
 		<h1>Il punto di partenza per i tuoi progetti.</h1>
-	</section>
-	
+	</section> -->
+	<section class="slider">
+		<ul id="slides">
+  			<li><a href="#slide1"><img src="images/slider/slide1.jpg" alt="Welcome to Slippry!"></a></li>
+  			<li><a href="#slide2"><img src="images/slider/slide2.jpg"  alt="This is an awesome jQuery slider plugin."></a></li>
+  			<li><a href="#slide3"><img src="images/slider/slide3.jpg" alt="Check it out, you are going to <span class='red'>♥</span> it :)"></a></li>
+		</ul>
+	</section>	
   <!-- About Section -->
   	<section class="about" id="about">
     	<h2 class="hidden">About</h2>
@@ -97,5 +102,19 @@
   <div class="copyright">&copy;2015 - <strong>Light Theme</strong></div>
 </div>
 <!-- Main Container Ends -->
+	
+	<script>
+		$ (function(){
+			var slides = $("#slides").slippry({
+				// transition: 'fade',
+				// useCSS: true,
+				// speed: 1000,
+				// pause: 3000,
+				// auto: true,
+				// preload: 'visible',
+				// autoHover: false
+			});			
+		});
+	</script>	
 </body>
 </html>
