--- a/index.html
+++ b/index.html
@@ -45,35 +45,21 @@
 		</ul>
 	</section>	
   <!-- About Section -->
-  	<section class="about" id="about">
-    	<h2 class="hidden">About</h2>
-    	<p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 	exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-    	<p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-    	<p class="text_column">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-  </section>
+  	<section class="news" id="news">
+		<article class="newsarticle"> <img src="images/news/news.jpg" alt="" width="220" height="100">
+		  <p class="newstext">News Article 1 I write here sha-lalalalalalallalalalalalalalala</p>
+		</article>
+	  <article class="newsarticle"> <img src="images/news/news.jpg" alt="" width="220" height="100">
+		  <p class="newstext">Article 2</p>
+	  </article>
+	  <article class="newsarticle"> <img src="images/news/news.jpg" alt="" width="220" height="100">
+		  <p class="newstext">Article 3</p>
+	  </article>
+		<article class="newsarticle"> <img src="images/news/news.jpg" alt="" width="220" height="100">
+		  <p class="newstext">Article 4</p>
+	  </article>	    	
+  	</section>
   <!-- Stats Gallery Section -->
-  <div class="gallery">
-    <div class="thumbnail">
-      <h1 class="stats">1500</h1>
-      <h4>TITLE</h4>
-      <p>One line description</p>
-    </div>
-    <div class="thumbnail">
-      <h1 class="stats">2300</h1>
-      <h4>TITLE</h4>
-      <p>One line description</p>
-    </div>
-    <div class="thumbnail">
-      <h1 class="stats">7500</h1>
-      <h4>TITLE</h4>
-      <p>One line description</p>
-    </div>
-    <div class="thumbnail">
-      <h1 class="stats">9870</h1>
-      <h4>TITLE</h4>
-      <p>One line description</p>
-    </div>
-  </div>
   <!-- Parallax Section -->
   <section class="banner">
     <h2 class="parallax">PARALLAX HERO</h2>
@@ -99,7 +85,7 @@
     <div class="button">subscribe</div>
   </section>
   <!-- Copyrights Section -->
-  <div class="copyright">&copy;2015 - <strong>Light Theme</strong></div>
+  <div class="copyright">&copy;2018 - <strong>Fulcrum Associazione Culturale</strong></div>
 </div>
 <!-- Main Container Ends -->
 	
