--- a/index.html
+++ b/index.html
@@ -46,16 +46,17 @@
 	</section>	
   <!-- About Section -->
   	<section class="news" id="news">
-		<article class="newsarticle"> <img src="images/news/news.jpg" alt="" width="220" height="100">
+		<h3>Ultime Notizie</h3>
+		<article class="newsarticle"> <img src="images/news/news.jpg" alt="" class="newsimage">
 		  <p class="newstext">News Article 1 I write here sha-lalalalalalallalalalalalalalala</p>
 		</article>
-	  <article class="newsarticle"> <img src="images/news/news.jpg" alt="" width="220" height="100">
+	  <article class="newsarticle"> <img src="images/news/news.jpg" alt="" class="newsimage">
 		  <p class="newstext">Article 2</p>
 	  </article>
-	  <article class="newsarticle"> <img src="images/news/news.jpg" alt="" width="220" height="100">
+	  <article class="newsarticle"> <img src="images/news/news.jpg" alt="" class="newsimage">
 		  <p class="newstext">Article 3</p>
 	  </article>
-		<article class="newsarticle"> <img src="images/news/news.jpg" alt="" width="220" height="100">
+		<article class="newsarticle"> <img src="images/news/news.jpg" alt="" class="newsimage">
 		  <p class="newstext">Article 4</p>
 	  </article>	    	
   	</section>
@@ -85,7 +86,7 @@
     <div class="button">subscribe</div>
   </section>
   <!-- Copyrights Section -->
-  <div class="copyright">&copy;2018 - <strong>Fulcrum Associazione Culturale</strong></div>
+  <div class="copyright">&copy;2019 - <strong>Fulcrum Associazione Culturale</strong></div>
 </div>
 <!-- Main Container Ends -->
 	
