--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Fulcrum Associazione Culturale</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 <link href="css/singlePageTemplate.css" rel="stylesheet" type="text/css">
 <link href="css/navbar.css" rel="stylesheet" type="text/css">
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
@@ -23,13 +23,18 @@
 
 </head>
 <body>
+	<div class="topbar">
+		<img class="upperlogo" src="images/fulcrum orizzontale.jpg"> 
+		<div class="navbar">
+			<div class="subnav">
+				<button class="subnavbtn">Progetti <i class="fa fa-caret-down"></i></button>
+	    		<div class="subnav-content"> <a href="#">Gioco dell'Oca</a> <a href="#">Guida alla Frontiera Galattica</a> <a href="#">Ammo2</a></div>
+      		</div>
+	  		<a href ="#notizie">Notizie</a> <a href ="#fulcrum">Fulcrum</a> <a href ="#servizi">Servizi</a> <a href ="#faq">FAQ</a> <a href ="#contatti">Contatti</a>		
+		</div>
+	</div>
 <!-- Main Container -->
-	<div class="navbar">
-	  <div class="subnav">
-	    <button class="subnavbtn">Progetti <i class="fa fa-caret-down"></i></button>
-	    <div class="subnav-content"> <a href="#">Gioco dell'Oca</a> <a href="#">Guida alla Frontiera Galattica</a> <a href="#">Ammo2</a></div>
-      </div>
-	  <a href ="#notizie">Notizie</a> <a href ="#fulcrum">Fulcrum</a> <a href ="#servizi">Servizi</a> <a href ="#faq">FAQ</a> <a href ="#contatti">Contatti</a> </div>
+	
 	<div class="container"> 
   	<!-- Navigation -->
 <!-- Hero Section 
@@ -60,31 +65,11 @@
 		  <p class="newstext">Article 4</p>
 	  </article>	    	
   	</section>
-  <!-- Stats Gallery Section -->
-  <!-- Parallax Section -->
-  <section class="banner">
-    <h2 class="parallax">PARALLAX HERO</h2>
-    <p class="parallax_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-  </section>
-  <!-- More Info Section -->
-  <footer>
-    <article class="footer_column">
-      <h3>ABOUT</h3>
-      <img src="images/placeholder.jpg" alt="" width="400" height="200" class="cards"/>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla </p>
-    </article>
-    <article class="footer_column">
-      <h3>LOCATION</h3>
-      <img src="images/placeholder.jpg" alt="" width="400" height="200" class="cards"/>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla </p>
-    </article>
-  </footer>
-  <!-- Footer Section -->
-  <section class="footer_banner" id="contact">
-    <h2 class="hidden">Footer Banner Section </h2>
-    <p class="hero_header">FOR THE LATEST NEWS &amp; UPDATES</p>
-    <div class="button">subscribe</div>
-  </section>
+	<section class="footer_banner" id="contact">
+    	<h2 class="hidden">Footer Banner Section </h2>
+    	<!--<p class="hero_header">FOR THE LATEST NEWS &amp; UPDATES</p>-->
+		<div class="footericons"><i class="fab fa-twitter"></i><i class="fab fa-facebook-square"></i><i class="fab fa-instagram"></i><i class="fab fa-youtube"></i></div>
+	</section>
   <!-- Copyrights Section -->
   <div class="copyright">&copy;2019 - <strong>Fulcrum Associazione Culturale</strong></div>
 </div>
