--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Fulcrum Associazione Culturale</title>
+<title>Fulcrum Associazione Culturale - Home</title>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-<link href="css/singlePageTemplate.css" rel="stylesheet" type="text/css">
+<link href="css/index.css" rel="stylesheet" type="text/css">
 <link href="css/navbar.css" rel="stylesheet" type="text/css">
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
 <script>var __adobewebfontsappname__="dreamweaver"</script>
@@ -20,7 +20,7 @@
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script src="js/slippry.min.js"></script>
 <link rel="stylesheet" href="css/slippry.css" />
-
+<link href="css/template.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div class="topbarsmall">
@@ -47,7 +47,7 @@
       		</div>
 	  		<a href ="#notizie">Notizie</a> <a href ="#fulcrum">Fulcrum</a> <a href ="#servizi">Servizi</a> <a href ="#faq">FAQ</a> <a href ="#contatti">Contatti</a>		
 		</div>
-</div>
+	</div>
 <!-- Main Container -->
 	
 	<div class="container"> 
