--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	  </article>	    	
   	</section>
 	<section class="footer_banner" id="contact">
-    	<h2 class="hidden">Footer Banner Section </h2>
+    	<h2 class="hidden">Fulcrum Associazione Culturale </h2>
     	<!--<p class="hero_header">FOR THE LATEST NEWS &amp; UPDATES</p>-->
 		<div class="footericons">
 		  <div class="footericon"><i class="fab fa-twitter"></i></div>
