--- a/progetti.html
+++ b/progetti.html
@@ -67,7 +67,7 @@
 		</section>		
 		<!-- InstanceEndEditable -->
 		<section class="footer_banner" id="contact">
-   		  <h2 class="hidden">Footer Banner Section </h2>
+    		<h2 class="hidden">Fulcrum Associazione Culturale </h2>
     		<!--<p class="hero_header">FOR THE LATEST NEWS &amp; UPDATES</p>-->
 			<div class="footericons">
 		  		<div class="footericon"><i class="fab fa-twitter"></i></div>
@@ -75,10 +75,10 @@
           		<div class="footericon"><i class="fab fa-instagram"></i></div>
           		<div class="footericon"><i class="fab fa-youtube"></i></div>
 			</div>
-	  </section>
+		</section>
   <!-- Copyrights Section -->
   		<div class="copyright">&copy;2019 - <strong>Fulcrum Associazione Culturale</strong></div>
-</div>
+	</div>
 	<!-- InstanceBeginEditable name="scripts" -->
 	<!-- InstanceEndEditable -->
 	<script> 
