--- a/progetti/oca.html
+++ b/progetti/oca.html
@@ -1,23 +1,24 @@
 <!doctype html>
-<html lang="en-US">
+<html lang="en-US"><!-- InstanceBegin template="/Templates/FulcrumProjectTemplate.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- TemplateBeginEditable name="doctitle" -->
+<!-- InstanceBeginEditable name="doctitle" -->
 <title>Fulcrum Associazione Culturale - Template</title>
-<!-- TemplateEndEditable -->
-<!-- TemplateBeginEditable name="head" -->
-<!-- TemplateEndEditable -->
+<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
 <link href="../css/template.css" rel="stylesheet" type="text/css">
 <link href="../css/navbar.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+<link href="../css/projecttemplate.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 	<div class="topbarsmall">
-		<img class="smalllogo" src="images/logo.png" alt="">
-		<img class="smalllogotext" src="images/scrittalogo.png" alt="">
+		<img class="smalllogo" src="../images/logo.png" alt="">
+		<img class="smalllogotext" src="../images/scrittalogo.png" alt="">
     	<div id="smallmenulinks">
 			<a href ="#notizie">Notizie</a> 
 			<a href ="#fulcrum">Fulcrum</a> 
@@ -31,7 +32,7 @@
 	</div>
 	
 	<div class="topbar">
-		<img class="upperlogo" src="images/fulcrum orizzontale.png" alt=""> 
+		<img class="upperlogo" src="../images/fulcrum orizzontale.png" alt=""> 
 		<div class="navbar">
 			<div class="subnav">
 				<button class="subnavbtn">Progetti <i class="fa fa-caret-down"></i></button>
@@ -40,14 +41,23 @@
 	  		<a href ="#notizie">Notizie</a> <a href ="#fulcrum">Fulcrum</a> <a href ="#servizi">Servizi</a> <a href ="#faq">FAQ</a> <a href ="#contatti">Contatti</a>		
 		</div>
 	</div>
-<!-- TemplateBeginEditable name="body" -->
-<!-- TemplateEndEditable -->
-	<div class="container">
-		<!-- TemplateBeginEditable name="content" -->
-		<!-- TemplateEndEditable -->
+<!-- InstanceBeginEditable name="body" -->
+<!-- InstanceEndEditable -->
+	<div class="container">		
+	  <section class="project">
+		<h1 class="title">
+			<!-- InstanceBeginEditable name="title" -->
+			Titolo
+			<!-- InstanceEndEditable -->
+		</h1>
+		<!-- InstanceBeginEditable name="content" -->
+		<img class="imgcontent" src="../images/1100x300.png" alt="">
+		<p class="content"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+		</p>
+		<!-- InstanceEndEditable -->
+	</section>
 		<section class="footer_banner" id="contact">
     		<h2 class="hidden">Fulcrum Associazione Culturale </h2>
-    		<!--<p class="hero_header">FOR THE LATEST NEWS &amp; UPDATES</p>-->
 			<div class="footericons">
 		  		<div class="footericon"><i class="fab fa-twitter"></i></div>
           		<div class="footericon"><i class="fab fa-facebook-square"></i></div>
@@ -58,8 +68,8 @@
   <!-- Copyrights Section -->
   		<div class="copyright">&copy;2019 - <strong>Fulcrum Associazione Culturale</strong></div>
 	</div>
-	<!-- TemplateBeginEditable name="scripts" -->
-	<!-- TemplateEndEditable -->
+	<!-- InstanceBeginEditable name="scripts" -->
+	<!-- InstanceEndEditable -->
 	<script> 
 		function openSmallMenu(){
 			var x = document.getElementById("smallmenulinks");
@@ -71,4 +81,4 @@
 		}			
 	</script>
 </body>
-</html>
+<!-- InstanceEnd --></html>
