--- a/progetti/ammo2.html
+++ b/progetti/ammo2.html
@@ -32,7 +32,7 @@
 	</div>
 	
 	<div class="topbar">
-		<img class="upperlogo" src="../images/fulcrum orizzontale.png" alt=""> 
+		<img class="upperlogo" src="../images/fulcrum%20orizzontale.png" alt=""> 
 		<div class="navbar">
 			<div class="subnav">
 				<button class="subnavbtn">Progetti <i class="fa fa-caret-down"></i></button>
