--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	</div>
 	
 	<div class="topbar">
-		<img class="upperlogo" src="images/fulcrum orizzontale.png" alt=""> 
+        <div class="logowrap"><img class="upperlogo" src="images/fulcrum orizzontale.jpg" alt=""></div> 
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
