--- a/progetti.html
+++ b/progetti.html
@@ -8,10 +8,10 @@
 <title>Fulcrum Associazione Culturale - Progetti</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
-<link href="progetti.css" rel="stylesheet" type="text/css">
+<link href="css/progetti.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
-<link href="css/template.css" rel="stylesheet" type="text/css">
-<link href="css/navbar.css" rel="stylesheet" type="text/css">
+<link href="/css/template.css" rel="stylesheet" type="text/css">
+<link href="/css/navbar.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 
@@ -32,7 +32,7 @@
 	</div>
 	
 	<div class="topbar">
-		<img class="upperlogo" src="images/fulcrum%20orizzontale.png" alt=""> 
+		<div class="logowrap"><img class="upperlogo" src="/images/fulcrum orizzontale.jpg" alt=""></div> 
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
