--- a/progetti.html
+++ b/progetti.html
@@ -10,15 +10,17 @@
 <!-- InstanceBeginEditable name="head" -->
 <link href="css/progetti.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
-<link href="/css/template.css" rel="stylesheet" type="text/css">
-<link href="/css/navbar.css" rel="stylesheet" type="text/css">
+<link href="css/template.css" rel="stylesheet" type="text/css">
+<link href="css/navbar.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+<!-- InstanceBeginEditable name="stylesheets" -->
+<!-- InstanceEndEditable -->
 </head>
 
 <body>
 	<div class="topbarsmall">
-		<img class="smalllogo" src="images/logo.png" alt="">
-		<img class="smalllogotext" src="images/scrittalogo.png" alt="">
+		<img class="smalllogo" src="/images/logo.png" alt="">
+		<img class="smalllogotext" src="/images/scrittalogo.png" alt="">
     	<div id="smallmenulinks">
 			<a href ="#notizie">Notizie</a> 
 			<a href ="#fulcrum">Fulcrum</a> 
@@ -32,17 +34,17 @@
 	</div>
 	
 	<div class="topbar">
-		<div class="logowrap"><img class="upperlogo" src="/images/fulcrum orizzontale.jpg" alt=""></div> 
+		<div class="logowrap"><img class="upperlogo" src="images/fulcrum%20orizzontale.jpg" alt=""></div> 
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
 					<a href="progetti.html">Progetti <i class="fa fa-caret-down"></i></a>
 				</div>
 	    		<div class="subnav-content"> 
-					<a class="navbarlink" href="progetti/oca.html">Gioco dell'Oca</a> 
-					<a class="navbarlink" href="progetti/guida.html">Guida alla Frontiera Galattica</a> 
-					<a class="navbarlink" href="progetti/ammo2.html">Ammo2</a>
-					<a class="navbarlink" href="progetti/aq.html">Adventure Quest</a>
+					<a class="navbarlink" href="/progetti/oca.html">Gioco dell'Oca</a> 
+					<a class="navbarlink" href="/progetti/guida.html">Guida alla Frontiera Galattica</a> 
+					<a class="navbarlink" href="/progetti/ammo2.html">Ammo2</a>
+					<a class="navbarlink" href="/progetti/aq.html">Adventure Quest</a>
 				</div>
       		</div>
 	  		<a class="navbarlink" href ="#notizie">Notizie</a> <a class="navbarlink" href ="#fulcrum">Fulcrum</a> <a class="navbarlink" href ="#servizi">Servizi</a> <a class="navbarlink" href ="#faq">FAQ</a> <a class="navbarlink" href ="#contatti">Contatti</a>		
