--- a/progetti/ammo2.html
+++ b/progetti/ammo2.html
@@ -12,6 +12,7 @@
 <link href="../css/template.css" rel="stylesheet" type="text/css">
 <link href="../css/navbar.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
 
 <link href="../css/projecttemplate.css" rel="stylesheet" type="text/css">
 
@@ -72,11 +73,17 @@
 		  	    </div>
 				<div class="sidebar">
                   	<div class="flag">
-						<p>
-							<i class="fas fa-bullhorn"></i>
-                      		Notizie
-                      	</p>
+                  	  <p> <em class="fas fa-bullhorn"></em> Notizie </p>
                   	</div>
+					<section class="news">
+						<!-- InstanceBeginEditable name="news" -->
+						<time class="newsdate">01/01/2019</time>
+						<h3>Project Title</h3>
+						<img src="../images/315x150.png">
+						<h4>News Title</h4>
+						<p>Lorem ipsum</p>
+						<!-- InstanceEndEditable -->
+					</section>
 				</div>
 	  		</div>
 		</section>
