--- a/progetti.html
+++ b/progetti.html
@@ -13,6 +13,7 @@
 <link href="css/template.css" rel="stylesheet" type="text/css">
 <link href="css/navbar.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
 <!-- InstanceBeginEditable name="stylesheets" -->
 <!-- InstanceEndEditable -->
 </head>
