--- a/progetti/guida.html
+++ b/progetti/guida.html
@@ -14,6 +14,7 @@
 <link href="../css/template.css" rel="stylesheet" type="text/css">
 <link href="../css/navbar.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
 
 <link href="../css/projecttemplate.css" rel="stylesheet" type="text/css">
 
@@ -74,10 +75,7 @@
 		  	    </div>
 				<div class="sidebar">
                   	<div class="flag">
-						<p>
-							<i class="fas fa-bullhorn"></i>
-                      		Notizie
-                      	</p>
+                  	  <p> <em class="fas fa-bullhorn"></em> Notizie </p>
                   	</div>
 					<section class="news">
 						<!-- InstanceBeginEditable name="news" -->
