--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 					<a class="navbarlink" href="progetti/aq.html">Adventure Quest</a>
 				</div>
       		</div>
-	  		<a class="navbarlink" href ="#fulcrum">Chi Siamo</a> <a class="navbarlink" href ="#servizi">Servizi</a> <a class="navbarlink" href ="#faq">FAQ</a> <a class="navbarlink" href ="#contatti">Contatti</a> <a class="navbarlink" href ="index.html">Home</a>		
+	  		<a class="navbarlink" href ="about.html">Chi Siamo</a> <a class="navbarlink" href ="#servizi">Servizi</a> <a class="navbarlink" href ="#faq">FAQ</a> <a class="navbarlink" href ="#contatti">Contatti</a> <a class="navbarlink" href ="index.html">Home</a>		
 		</div>
 	</div>
 <!-- InstanceBeginEditable name="body" -->
