--- a/contactform.html
+++ b/contactform.html
@@ -73,9 +73,7 @@
  						</td>
 					</tr>
 					<tr>
- 						<td class="leftcell">
-  							<label for="email">Inidirizzo E-Mail *</label>
- 						</td>
+ 						<td class="leftcell"><label for="email">Indirizzo E-Mail *</label></td>
  						<td>
   							<input  type="text" name="email" maxlength="80" size="30">
  						</td>
