--- a/faq.html
+++ b/faq.html
@@ -59,20 +59,32 @@
 			<div>
 				<h1>Domande Frequenti</h1>
 				<div class="domanda">
-					<h2>Domanda 1</h2>
-					<p>Lorem Ipsum</p>
+					<h2>Cos'è Fulcrum?</h2>
+					<p>Fulcrum è un'associazione culturale con lo scopo di promuovere e sviluppare progetti di artisti e autori emergenti. </p>
 				</div>
 				<div class="domanda">
-					<h2>Domanda 1</h2>
-					<p>Lorem Ipsum</p>
+				  <h2>Come posso presentarvi un mio progetto?</h2>
+				  <p>Attraverso la nostra pagina Facebook o la pagina <a href="contactform.html">Contatti</a> sul sito.</p>
 				</div>
 				<div class="domanda">
-					<h2>Domanda 1</h2>
-					<p>Lorem Ipsum</p>
+				  <h2>Fate pagare per i vostri servizi?</h2>
+				  <p>Lorem Ipsum</p>
 				</div>
 				<div class="domanda">
-					<h2>Domanda 1</h2>
-					<p>Lorem Ipsum</p>
+				  <h2>Fate pubblicazioni gratuite o avete solo prodotti su licenza?</h2>
+				  <p>Lorem Ipsum</p>
+				</div>
+				<div class="domanda">
+				  <h2>Fate solo editoria o vi occupate di altri campi?</h2>
+				  <p>Ci occupiamo di editoria e di arte. Dove è possibile cerchiamo di coniugare le due cose.</p>
+				</div>
+				<div class="domanda">
+				  <h2>Producete anche per l’estero e in altre lingue?</h2>
+				  <p>Siamo in grado di produrre e distribuire in Inglese e Francese e abbiamo contatti con la distribuzione europea.</p>
+				</div>
+				<div class="domanda">
+				  <h2>Accettate fumetti?</h2>
+				  <p>Siamo in grado di impaginare, editare, produrre e distribuire anche prodotti di fumettistica. </p>
 				</div>
 			</div>
 		</section>
