--- a/index.html
+++ b/index.html
@@ -65,28 +65,31 @@
     	<div class="logolarge"><img src="images/fulcrum orizzontale.jpg" alt=""/></div>	  
 		<h1>Il punto di partenza per i tuoi progetti.</h1>
 	</section> -->
-	<section class="slider">
-		<ul id="slides">
-  			<li><a href="#slide1"><img src="images/slider/slide1.jpg" alt="Welcome to Slippry!"></a></li>
-  			<li><a href="#slide2"><img src="images/slider/slide2.jpg"  alt="This is an awesome jQuery slider plugin."></a></li>
-  			<li><a href="#slide3"><img src="images/slider/slide3.jpg" alt="Check it out, you are going to <span class='red'>♥</span> it :)"></a></li>
-		</ul>
+	<section class="slider">		
+			<ul id="slides">
+  				<li><a href="#slide1"><img src="images/slider/slide1.jpg" alt="Guida alla Frontiera Galattica - I viaggi della nave Onyx"></a></li>
+  				<li><a href="#slide2"><img src="images/slider/slide2.jpg"  alt="This is an awesome jQuery slider plugin."></a></li>
+  				<li><a href="#slide3"><img src="images/slider/slide3.jpg" alt="Check it out, you are going to <span class='red'>♥</span> it :)"></a></li>
+				<li><a href="#slide3"><img src="images/slider/slide4.jpg" alt="Check it out, you are going to <span class='red'>♥</span> it :)"></a></li>
+			</ul>
 	</section>	
   <!-- About Section -->
   	<section class="news" id="news">
 		<h3>Ultime Notizie</h3>
-		<article class="newsarticle"> <img src="images/news/news.jpg" alt="" class="newsimage">
-		  <p class="newstext">News Article 1 I write here sha-lalalalalalallalalalalalalalala</p>
-		</article>
-	  <article class="newsarticle"> <img src="images/news/news.jpg" alt="" class="newsimage">
-		  <p class="newstext">Article 2</p>
-	  </article>
-	  <article class="newsarticle"> <img src="images/news/news.jpg" alt="" class="newsimage">
-		  <p class="newstext">Article 3</p>
-	  </article>
-		<article class="newsarticle"> <img src="images/news/news.jpg" alt="" class="newsimage">
-		  <p class="newstext">Article 4</p>
-	  </article>	    	
+        <div class="newsarticlebox">
+          <article class="newsarticle"> <img src="images/news/news.jpg" alt="" class="newsimage">
+            <p class="newstext">News Article 1 I write here sha-lalalalalalallalalalal alalalala</p>
+          </article>
+          <article class="newsarticle"> <img src="images/guida/guida250x125.jpg" alt="" class="newsimage">
+            <p class="newstext">Article 2</p>
+          </article>
+          <article class="newsarticle"> <img src="images/news/news.jpg" alt="" class="newsimage">
+            <p class="newstext">Article 3</p>
+          </article>
+          <article class="newsarticle"> <img src="images/news/news.jpg" alt="" class="newsimage">
+            <p class="newstext">Article 4</p>
+          </article>
+        </div>	    	
   	</section>
 	<section class="footer_banner" id="contact">
     	<h2 class="hidden">Fulcrum Associazione Culturale </h2>
@@ -113,6 +116,8 @@
 				// auto: true,
 				// preload: 'visible',
 				// autoHover: false
+				//captions: 'custom',
+				pager: false
 			});			
 		});
 	</script>	
