--- a/progetti.html
+++ b/progetti.html
@@ -57,19 +57,21 @@
 		<!-- InstanceBeginEditable name="content" -->
 		<section class="progetti">
 			<article>
-				<img src="images/progetti/guidap.jpg" alt="">
+				<a href="progetti/guida.html"><img class="immaginiprogetti" src="images/guida/guida250x125.jpg" alt=""></a>					
 				<div class="testoprogetti">
-				  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				  	<h2>Guida Alla Frontiera Galattica</h2>
+				  	<p>Preparatevi a saltare fra una stella e l'altra a bordo dell'astronave Onyx, nel suo viaggio di ritorno dalla frontiera della Galassia, combattendo i nemici dell'Impero ed esplorando pianeti sconosciuti e meravigliosi. Intrighi politici, alieni riottosi e pericoli sempre incombenti sono il sale del primo gioco di ruolo edito da Fulcrum e completamente illustrato da Luca Oleastri. Sarete in grado di riportare l'equipaggio a casa?</p>
+				</div>
+			</article> 
+			<article>
+				<a href="progetti/oca.html"><img class="immaginiprogetti" src="images/progetti/bergaminip.jpg" alt=""></a>
+				<div class="testoprogetti">
+					<h2>Gioco dell'Oca Illustrato</h2>
+				  	<p>Un gioco della tradizione in chiave mistica. Le illustrazioni dell'artista di fama nazionale Anna Bergamini danno vita a uno dei prodotti ludici più classici, con un'impronta mistica e spirituale</p>
 			  </div>
 			</article> 
 			<article>
-				<img src="images/progetti/bergaminip.jpg" alt="">
-				<div class="testoprogetti">
-				  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			  </div>
-			</article> 
-			<article>
-				<img src="images/progetti/aqp.jpg" alt="">
+				<img class="immaginiprogetti" src="images/progetti/aqp.jpg" alt="">
 				<div class="testoprogetti">
 				  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			  </div>
