--- a/progetti/guida.html
+++ b/progetti/guida.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Fulcrum Associazione Culturale - ProjectTemplate</title>
+<title>Fulcrum Associazione Culturale - Guida</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->	
 <!-- InstanceEndEditable -->
@@ -13,9 +13,9 @@
 <link href="../css/navbar.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
-
+<!-- InstanceBeginEditable name="stylesheets" -->
 <link href="../css/projecttemplate.css" rel="stylesheet" type="text/css">
-
+<!-- InstanceEndEditable -->
 </head>
 
 <body>
@@ -57,7 +57,9 @@
 	<div class="container">
 		
 		<section class="project">
-            <div class="imgcontent"><img src="../images/1100x300.png" alt=""></div>				
+			<!-- InstanceBeginEditable name="banner" -->
+            <div class="imgcontent"><img src="../images/guida/bannerguida.jpg" alt=""></div>	
+			<!-- InstanceEndEditable -->
 		  	<div class="projectbox">
 		  		<div class="contentbox">
 		  	    	<h1 class="title">
@@ -80,9 +82,9 @@
 						<div class="newstop">
 						  <time class="newsdate">01/01/2019</time>
 						  <h3>Project Title</h3>
-					    </div>
-                        <div><img src="../images/315x150.png"></div>
-<h4>News Title</h4>
+					    </div>                        
+						<img src="../images/guida/guida250x125.jpg">						
+						<h4>News Title</h4>
 					    <p>Lorem ipsum</p>
 						<!-- InstanceEndEditable -->
 					</section>
