--- a/progetti/oca.html
+++ b/progetti/oca.html
@@ -13,9 +13,9 @@
 <link href="../css/navbar.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
-
+<!-- InstanceBeginEditable name="stylesheets" -->
 <link href="../css/projecttemplate.css" rel="stylesheet" type="text/css">
-
+<!-- InstanceEndEditable -->
 </head>
 
 <body>
@@ -57,7 +57,9 @@
 	<div class="container">
 		
 		<section class="project">
-            <div class="imgcontent"><img src="../images/1100x300.png" alt=""></div>				
+			<!-- InstanceBeginEditable name="banner" -->
+            <div class="imgcontent"><img src="../images/1100x300.png" alt=""></div>	
+			<!-- InstanceEndEditable -->
 		  	<div class="projectbox">
 		  		<div class="contentbox">
 		  	    	<h1 class="title">
