--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	</div>
 	
 	<div class="topbar">
-        <div class="logowrap"><img class="upperlogo" src="images/fulcrum orizzontale.jpg" alt=""></div> 
+        <div class="logowrap"><img class="upperlogo" src="images/logo 350x125.jpg" alt=""></div> 
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
@@ -50,7 +50,7 @@
 					<a class="navbarlink" href="progetti/oca.html">Gioco dell'Oca</a> 
 					<a class="navbarlink" href="progetti/guida.html">Guida alla Frontiera Galattica</a> 
 					<a class="navbarlink" href="progetti/ammo2.html">Ammo2</a>
-					<a class="navbarlink" href="progetti/aq.html">Adventure Quest</a>
+					<a class="navbarlink" href="progetti/rune.html">Rune</a>
 				</div>
       		</div>
 	  		<a class="navbarlink" href ="about.html">Chi Siamo</a> <a class="navbarlink" href ="servizi.html">Servizi</a> <a class="navbarlink" href ="faq.html">FAQ</a> <a class="navbarlink" href ="contactform.html">Contatti</a> <a class="navbarlink" href ="">Home</a>		
@@ -67,21 +67,21 @@
 	</section> -->
 	<section class="slider">		
 			<ul id="slides">
-  				<li><a href="#slide1"><img src="images/slider/slide1.jpg" alt="Guida alla Frontiera Galattica - I viaggi della nave Onyx"></a></li>
-  				<li><a href="#slide2"><img src="images/slider/slide2.jpg"  alt="This is an awesome jQuery slider plugin."></a></li>
+  				<li><a href="about.html"><img src="images/slider/slide1.jpg" alt=""></a></li>
+  				<li><a href="/progetti/guida.html"><img src="images/slider/slide2.jpg"  alt="Guida alla Frontiera Galattica - I viaggi della nave Onyx"></a></li>
   				<li><a href="#slide3"><img src="images/slider/slide3.jpg" alt="Check it out, you are going to <span class='red'>♥</span> it :)"></a></li>
 				<li><a href="#slide3"><img src="images/slider/slide4.jpg" alt="Check it out, you are going to <span class='red'>♥</span> it :)"></a></li>
 			</ul>
 	</section>	
   <!-- About Section -->
   	<section class="news" id="news">
-		<h3>Ultime Notizie</h3>
+		<h2>Ultime Notizie</h2>
         <div class="newsarticlebox">
-          <article class="newsarticle"> <img src="images/news/news.jpg" alt="" class="newsimage">
-            <p class="newstext">News Article 1 I write here sha-lalalalalalallalalalal alalalala</p>
+          <article class="newsarticle"> <img src="images/logo250x125.jpg" alt="" class="newsimage">
+            <p class="newstext">La beta del sito di Fulcrum è online! Ci scusiamo per eventuali disservizi.</p>
           </article>
           <article class="newsarticle"> <img src="images/guida/guida250x125.jpg" alt="" class="newsimage">
-            <p class="newstext">Article 2</p>
+            <p class="newstext">Guida Alla Frontiera Galattica - Il primo progetto di Fulcrum ed Edizioni Scudo.</p>
           </article>
           <article class="newsarticle"> <img src="images/news/news.jpg" alt="" class="newsimage">
             <p class="newstext">Article 3</p>
@@ -92,7 +92,7 @@
         </div>	    	
   	</section>
 	<section class="footer_banner" id="contact">
-    	<h2 class="hidden">Fulcrum Associazione Culturale </h2>
+    	<h1 class="hidden">Fulcrum Associazione Culturale </h1>
     	<!--<p class="hero_header">FOR THE LATEST NEWS &amp; UPDATES</p>-->
 		<div class="footericons">
 		  <div class="footericon"><i class="fab fa-twitter"></i></div>
