--- a/progetti/rune.html
+++ b/progetti/rune.html
@@ -35,7 +35,7 @@
 	</div>
 	
 	<div class="topbar">
-		<div class="logowrap"><img class="upperlogo" src="../images/fulcrum%20orizzontale.jpg" alt=""></div> 
+		<div class="logowrap"><img class="upperlogo" src="../images/logo%20350x125.jpg" alt=""></div> 
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
