--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 	</div>
 	
 	<div class="topbar">
-		<div class="logowrap"><img class="upperlogo" src="images/fulcrum%20orizzontale.jpg" alt=""></div> 
+		<div class="logowrap"><img class="upperlogo" src="images/logo%20350x125.jpg" alt=""></div> 
 		<div class="navbar">
 			<div class="subnav">
                 <div class="subnavbtn">
@@ -45,7 +45,7 @@
 					<a class="navbarlink" href="progetti/oca.html">Gioco dell'Oca</a> 
 					<a class="navbarlink" href="progetti/guida.html">Guida alla Frontiera Galattica</a> 
 					<a class="navbarlink" href="progetti/ammo2.html">Ammo2</a>
-					<a class="navbarlink" href="progetti/aq.html">Adventure Quest</a>
+					<a class="navbarlink" href="progetti/rune.html">Adventure Quest</a>
 				</div>
       		</div>
 	  		<a class="navbarlink" href ="about.html">Chi Siamo</a> <a class="navbarlink" href ="servizi.html">Servizi</a> <a class="navbarlink" href ="faq.html">FAQ</a> <a class="navbarlink" href ="contactform.html">Contatti</a> <a class="navbarlink" href ="index.html">Home</a>		
@@ -56,31 +56,56 @@
 	<div class="container">
 		<!-- InstanceBeginEditable name="content" -->
 		<section class="about">
-			<div class="aboutlayout">
+			<div class="separator">
+			  <h2>Che cos'è Fulcrum? </h2>
+			</div>
+		  <div class="folder">
+				<img src="images/logo 200x200.jpg" alt="">
+				<div class="aboutcontent">
+				  <h3> Fulcrum Associazione Culturale</h3>
+				  <p>nasce dalla volontà di alcune persone di fare confluire esperienze e abilità personali nei campi dell’editoria, del gioco e dell’arte, promuovendo la creatività degli individui e dei gruppi di lavoro.<br>
+				    E’ composta da professionisti che, da anni, sono coinvolti nel mondo della cultura in Italia e all’estero.<br>
+				    Fulcrum si forma con lo scopo di creare e gestire una rete di servizi volti allo sviluppo, realizzazione, pubblicazione e pubblicizzazione di progetti editoriali, ludici e artistici individuali o di gruppo. Per ulteriori informazioni vi rimandiamo alle Domande Frequenti e alla pagina dei Servizi. </p>
+				</div>
+			</div>
+			<div class="separator">
+				<h2>
+					I fondatori di Fulcrum
+				</h2>
+			</div>
+		  <div class="folder">
 				<img src="images/foto/mirko.jpg" alt="">
 				<div class="aboutcontent">
-					<h2>						
+					<h3>						
 						Mirko Pellicioni
-					</h2>
+					</h3>
 					<p>
 						Lorem Ipsum
 					</p>
 				</div>
 			</div>
-		  	<div class="aboutlayout"> 
+		  	<div class="folder"> 
 			  <div class="aboutcontent">
-			    <h2> Angelo Alvisi </h2>
+			    <h3> Angelo Alvisi </h3>
 			    <p> Lorem Ipsum </p>
 		      </div>
 			  <img src="images/foto/angelo.jpg" alt="">
 		  	</div>
-		  <div class="aboutlayout"> 
+		  <div class="folder"> 
 			  <img src="images/foto/chiara.jpg" alt="">
 			  <div class="aboutcontent">
-			    <h2> Chiara Pellicioni </h2>
+			    <h3> Chiara Pellicioni </h3>
 			    <p> Lorem Ipsum </p>
 		      </div>
 		  </div>
+			<div class="folder"> 				
+			  	<div class="aboutcontent">
+			    	<h3> Luca Oleastri </h3>
+			    	<p> Lorem Ipsum </p>
+		      	</div>
+				<img src="images/foto/chiara.jpg" alt="">
+		  	</div>
+			
 		</section>
 		<!-- InstanceEndEditable -->
 		<section class="footer_banner" id="contact">
