--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<ul id="slides">
   				<li><a href="about.html"><img src="images/slider/slide1.jpg" alt=""></a></li>
   				<li><a href="/progetti/guida.html"><img src="images/slider/slide2.jpg"  alt="Guida alla Frontiera Galattica - I viaggi della nave Onyx"></a></li>
-  				<li><a href="#slide3"><img src="images/slider/slide3.jpg" alt="Check it out, you are going to <span class='red'>♥</span> it :)"></a></li>
+  				<li><a href="#slide3"><img src="images/slider/slide3.jpg" alt="Rune - La rinascita della prestigiosa rivista sul GDR"></a></li>
 				<li><a href="#slide3"><img src="images/slider/slide4.jpg" alt="Check it out, you are going to <span class='red'>♥</span> it :)"></a></li>
 			</ul>
 	</section>	
