--- a/progetti/rune.html
+++ b/progetti/rune.html
@@ -45,7 +45,7 @@
 					<a class="navbarlink" href="oca.html">Gioco dell'Oca</a> 
 					<a class="navbarlink" href="guida.html">Guida alla Frontiera Galattica</a> 
 					<a class="navbarlink" href="ammo2.html">Ammo2</a>
-					<a class="navbarlink" href="aq.html">Adventure Quest</a>
+					<a class="navbarlink" href="rune.html">Rune</a>
 				</div>
       		</div>
 	  		<a class="navbarlink" href ="../about.html">Chi Siamo</a> <a class="navbarlink" href ="../servizi.html">Servizi</a> <a class="navbarlink" href ="../faq.html">FAQ</a> <a class="navbarlink" href ="../contactform.html">Contatti</a> <a class="navbarlink" href ="../index.html">Home</a>		
@@ -58,7 +58,7 @@
 		
 		<section class="project">
 			<!-- InstanceBeginEditable name="banner" -->
-            <div class="imgcontent"><img src="../images/1100x300.png" alt=""></div>	
+            <div class="imgcontent"><img src="../images/slider/slide3.jpg" alt=""></div>	
 			<!-- InstanceEndEditable -->
 		  	<div class="projectbox">
 		  		<div class="contentbox">
