--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 					<a class="navbarlink" href="progetti/oca.html">Gioco dell'Oca</a> 
 					<a class="navbarlink" href="progetti/guida.html">Guida alla Frontiera Galattica</a> 
 					<a class="navbarlink" href="progetti/ammo2.html">Ammo2</a>
-					<a class="navbarlink" href="progetti/rune.html">Adventure Quest</a>
+					<a class="navbarlink" href="progetti/rune.html">Rune</a>
 				</div>
       		</div>
 	  		<a class="navbarlink" href ="about.html">Chi Siamo</a> <a class="navbarlink" href ="servizi.html">Servizi</a> <a class="navbarlink" href ="faq.html">FAQ</a> <a class="navbarlink" href ="contactform.html">Contatti</a> <a class="navbarlink" href ="index.html">Home</a>		
@@ -59,9 +59,9 @@
 			<div class="separator">
 			  <h2>Che cos'è Fulcrum? </h2>
 			</div>
-		  <div class="folder">
+		  <div class="fulcrumsheet">
 				<img src="images/logo 200x200.jpg" alt="">
-				<div class="aboutcontent">
+				<div class="aboutcontentright">
 				  <h3> Fulcrum Associazione Culturale</h3>
 				  <p>nasce dalla volontà di alcune persone di fare confluire esperienze e abilità personali nei campi dell’editoria, del gioco e dell’arte, promuovendo la creatività degli individui e dei gruppi di lavoro.<br>
 				    E’ composta da professionisti che, da anni, sono coinvolti nel mondo della cultura in Italia e all’estero.<br>
@@ -69,43 +69,55 @@
 				</div>
 			</div>
 			<div class="separator">
-				<h2>
-					I fondatori di Fulcrum
-				</h2>
+			  <h2>Chi siamo? </h2>
 			</div>
 		  <div class="folder">
-				<img src="images/foto/mirko.jpg" alt="">
-				<div class="aboutcontent">
+		  <div class="sheet"> 
+			  <div class="aboutcontentleft">
+			    <h3> Angelo Alvisi </h3>
+			    <p> Consulente Marketing e di Prodotto, Content Manager</p>
+			  </div>
+			  <img src="images/foto/angelo.jpg" alt="">
+		  	</div>
+		<div class="sheet"> 
+			  <div class="aboutcontentleft">
+			    <h3> Paola Giari </h3>
+			    <p>Illustratrice</p>
+			  </div>
+		  <img src="images/foto/Paola.jpg" alt="">
+		</div>
+		  <div class="sheet">
+				<div class="aboutcontentleft">
+			    	<h3> Rosa Maiorano </h3>
+			    	<p> Artista e Gallerista</p>
+				</div>
+			  	<img src="images/foto/chiara.jpg" alt="">
+		  	</div>
+		  <div class="sheet"> 				
+			  	<div class="aboutcontentleft">
+			    	<h3> Luca Oleastri </h3>
+			    	<p> Illustratore</p>
+			  	</div>			
+				<img src="images/foto/Luca.jpg" alt="">
+		  	</div>
+			
+		  <div class="sheet"> 
+			  	<div class="aboutcontentleft">
+			    	<h3> Chiara Pellicioni </h3>
+			    	<p> Illustratrice</p>
+			  	</div>
+			  <img src="images/foto/chiara.jpg" alt="">
+		  	</div>
+	  	  <div class="sheet">			  
+				<div class="aboutcontentleft">
 					<h3>						
 						Mirko Pellicioni
 					</h3>
-					<p>
-						Lorem Ipsum
-					</p>
+					<p> Grafico, Impaginatore, Game Designer</p>
 				</div>
+			  	<img src="images/foto/mirko.jpg" alt="">
 			</div>
-		  	<div class="folder"> 
-			  <div class="aboutcontent">
-			    <h3> Angelo Alvisi </h3>
-			    <p> Lorem Ipsum </p>
-		      </div>
-			  <img src="images/foto/angelo.jpg" alt="">
-		  	</div>
-		  <div class="folder"> 
-			  <img src="images/foto/chiara.jpg" alt="">
-			  <div class="aboutcontent">
-			    <h3> Chiara Pellicioni </h3>
-			    <p> Lorem Ipsum </p>
-		      </div>
-		  </div>
-			<div class="folder"> 				
-			  	<div class="aboutcontent">
-			    	<h3> Luca Oleastri </h3>
-			    	<p> Lorem Ipsum </p>
-		      	</div>
-				<img src="images/foto/chiara.jpg" alt="">
-		  	</div>
-			
+				</div>
 		</section>
 		<!-- InstanceEndEditable -->
 		<section class="footer_banner" id="contact">
