--- a/about.html
+++ b/about.html
@@ -75,7 +75,8 @@
 		  <div class="sheet"> 
 			  <div class="aboutcontentleft">
 			    <h3> Angelo Alvisi </h3>
-			    <p> Consulente Marketing e di Prodotto, Content Manager</p>
+			    <p> Consulente Marketing e di Prodotto.</p>
+			    <p>Content &nbsp;e Social Media Manager</p>
 			  </div>
 			  <img src="images/foto/angelo.jpg" alt="">
 		  	</div>
