--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 	</section> -->
 	<section class="slider">		
 			<ul id="slides">
-  				<li><a href="about.html"><img src="images/slider/slide1.jpg" alt=""></a></li>
-  				<li><a href="/progetti/guida.html"><img src="images/slider/slide2.jpg"  alt="Guida alla Frontiera Galattica - I viaggi della nave Onyx"></a></li>
-  				<li><a href="#slide3"><img src="images/slider/slide3.jpg" alt="Rune - La rinascita della prestigiosa rivista sul GDR"></a></li>
-				<li><a href="#slide3"><img src="images/slider/slide4.jpg" alt="Check it out, you are going to <span class='red'>♥</span> it :)"></a></li>
+  				<li><a href="about.html"><img src="images/banners/Fulcrum1100x300.jpg" alt=""></a></li>
+  				<li><a href="/progetti/guida.html"><img src="images/banners/Guida1100x300.jpg"  alt="Guida alla Frontiera Galattica - I viaggi della nave Onyx"></a></li>
+  				<li><a href="#slide3"><img src="images/banners/Rune1100x300.jpg" alt="Rune - La rinascita della prestigiosa rivista sul GDR"></a></li>
+				<li><a href="#slide3"><img src="images/banners/Oca1100x300.jpg" alt="Gioco dell'Oca - Un classico riprodotto da Fulcrum in chiave artistica"></a></li>
 			</ul>
 	</section>	
   <!-- About Section -->
@@ -78,16 +78,16 @@
 		<h2>Ultime Notizie</h2>
         <div class="newsarticlebox">
           <article class="newsarticle"> <img src="images/logo250x125.jpg" alt="" class="newsimage">
-            <p class="newstext">La beta del sito di Fulcrum è online! Ci scusiamo per eventuali disservizi.</p>
+            <p class="newstext">La beta del sito di Fulcrum è online! Ci scusiamo per eventuali disservizi!</p>
           </article>
-          <article class="newsarticle"> <img src="images/guida/guida250x125.jpg" alt="" class="newsimage">
-            <p class="newstext">Guida Alla Frontiera Galattica - Il primo progetto di Fulcrum ed Edizioni Scudo.</p>
+          <article class="newsarticle"> <img src="images/banners/guida250x125.jpg" alt="" class="newsimage">
+            <p class="newstext">Guida Alla Frontiera Galattica - Il primo GDR di Fulcrum ed Edizioni Scudo</p>
           </article>
-          <article class="newsarticle"> <img src="images/news/news.jpg" alt="" class="newsimage">
-            <p class="newstext">Article 3</p>
+          <article class="newsarticle"> <img src="images/banners/Rune250x125.jpg" alt="" class="newsimage">
+            <p class="newstext">Rune - La rinascita di un prestigioso titolo, nella forma di rivista di contenuti per giocatori</p>
           </article>
-          <article class="newsarticle"> <img src="images/news/news.jpg" alt="" class="newsimage">
-            <p class="newstext">Article 4</p>
+          <article class="newsarticle"> <img src="images/banners/Oca250x125.jpg" alt="" class="newsimage">
+            <p class="newstext">Gioco dell'Oca - Il grande classico del gioco dell'oca, tinto dall'Arte e dalla Mistica di Anna Bergamini</p>
           </article>
         </div>	    	
   	</section>
